--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tc/php-mvc-core",
+    "name": "thenew11/php-mvc-core",
     "autoload": {
         "psr-4": {
             "Tc\\PhpMvcCore\\": "src/"
